Change color of title due to contrast issues

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
 
 h1 {
   background-color: #6FA3B3;
-  color: #FFEE52;
   margin: 0;
   font-size: xx-large;
   height: 75px;
