--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -23,6 +23,6 @@ h2 {
 
 button {
     background-color: #6FA3B3;
-    color: whitesmoke;
+    color: black;
     border-radius: 5px;
 }
